Fonts, colors, images, more content

--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
   "sharing": {
-    "title": "demsagainstthenet.com",
-    "description": "A Fight for the Future website",
+    "title": "These Are The Democrats Helping Trump and Ajit Pai Kill Net Neutrality",
+    "description": "The vast majority of Americans support #netneutrality but these Dems are standing with Trump instead. Take action.",
     "image": "https://www.demsagainstthenet.com/share.jpg",
-    "defaultTweetText": "",
+    "defaultTweetText": "The vast majority of Americans support #netneutrality but these Dems are standing with Trump instead. Take action.",
     "url": "https://www.demsagainstthenet.com"
   },
   "googleAnalyticsId": "",
