Update domain name

--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
   "sharing": {
-    "title": "demsagainstthenet.com",
+    "title": "Dems Against the Net",
     "description": "A Fight for the Future website",
-    "image": "https://www.demsagainstthenet.com/share.jpg",
+    "image": "https://www.demsagainstthe.net/share.jpg",
     "defaultTweetText": "",
-    "url": "https://www.demsagainstthenet.com"
+    "url": "https://www.demsagainstthe.net"
   },
   "googleAnalyticsId": "",
   "actionNetworkPetitionId": "",
