--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demsagainstthenet.com",
+  "name": "demsagainstthe.net",
   "version": "1.0.0",
   "description": "A Fight for the Future website",
   "author": "Fight for the Future <team@fightforthefuture.org>",
@@ -11,7 +11,7 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
-    "deploy": "aws s3 sync dist s3://www.demsagainstthenet.com --acl public-read --delete"
+    "deploy": "aws s3 sync dist s3://www.demsagainstthe.net --acl public-read --delete"
   },
   "dependencies": {
     "nuxt": "^1.0.0"
