Try shorter sharing text

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "sharing": {
-    "title": "These Are The Democrats Helping Trump and Ajit Pai Kill Net Neutrality",
+    "title": "These Are The Democrats Helping Kill Net Neutrality",
     "description": "The vast majority of Americans support #netneutrality but these Dems are standing with Trump instead. Take action.",
     "image": "https://www.demsagainstthe.net/share.jpg",
     "defaultTweetText": "The vast majority of Americans support #netneutrality but these Dems are standing with Trump instead. Take action.",
