--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "defaultTweetText": "The vast majority of Americans support #netneutrality but these Dems are standing with Trump instead. Take action.",
     "url": "https://www.demsagainstthe.net"
   },
-  "googleAnalyticsId": "",
+  "googleAnalyticsId": "UA-123898108-8",
   "actionNetworkPetitionId": "",
   "donateUrl": "https://donate.fightforthefuture.org/",
   "mapboxToken": "",
